FlightPath 6.x Changelog
========================

2022-11-04
  Added code to increase compatibility with PHP 8.0.


2022-11-03
  Changed "Login" button to "Log in" to be consistent with English rules.
  
  Added more options for TinyMCE, including links and the ability to resize the editor.
  

2022-10-31
  Clarified instructions for default advising term.
  

2022-10-27
  Improved documentation for definitions.
  

2022-10-25
  For the _fp_error_handler() function, made it so the $msg saved to watchdog (and possibly emailed)
  is no more than 10,000 characters.
  
  Fixed bug in lassie_cron() where we were not getting the most recent "last check" correctly.  It was causing
  us to check for long-running jobs on every cron run, rather than no more than once every 45 minutes (as intended).
  

2022-10-19
  Added function get_faculty_email() to db.inc file.
  

2022-10-18
  Modified email that engagements sends out, so that the link is wrapped in <a> tag.
  
  Moved $system_name variable in engagements so it is available when receiving unknown text messages.
  
  Fixed bugs when creating an altert from engagements (when receiving unknown text message).
  

2022-10-09
  Added ability to set breadcrumbs on content view.  
  
  Working on what happens when an unknown number sends a text message.  It should send a notification
  to appropriate recipient, and save message as an Alert.


2022-10-03
  Re-arranging in popup course description how we show that the db_grade is different than the assigned grade.  Only
  applies when we've made a modification due to the grade being numeric.  We will now show the original numeric grade first.
  
  Fixed bug where + was being converted to a space when passed through the URL for Course::to_data_string(). Using a replacement text now.
  

2022-09-26
  Added additional code to help prevent issues when invalid courses are defined in group definitions.
  

2022-09-22